Updated the Runner name

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <includes>
-                        <include>Runners.runner</include>
+                        <include>Runners.TestRunner</include>
                     </includes>
                 </configuration>
             </plugin>
